--- a/decode.ipynb
+++ b/decode.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpt_decoder = Decoder(word_times=range(sum(row.num_tokens)), beam_width=200)"
+    "gpt_decoder = Decoder(word_times=range(sum(row.num_words)), beam_width=200)"
    ]
   },
   {
@@ -187,10 +187,10 @@
    "source": [
     "with tqdm(total=sum(row.num_words)) as pbar:\n",
     "    for i, num_words in enumerate(row.num_words):\n",
-    "        if i > 0:\n",
-    "            print(\"\\033[F\\033[F\", end='')\n",
+    "        # if i > 0:\n",
+    "        #     print(\"\\033[F\\033[F\", end='')\n",
     "        pbar.set_description(f\"Chunk {i+1} / {len(row.num_words)}\")\n",
-    "        context_window = sum(row.num_words[i-config[\"context_length\"]:i])\n",
+    "        context_window = sum(row.num_words[max(0, i-config[\"context_length\"]):i])\n",
     "        for _ in range(num_words):\n",
     "            beam_nucs = lm.beam_propose(gpt_decoder.beam, context_window)\n",
     "            for c, (hyp, nextensions) in enumerate(gpt_decoder.get_hypotheses()):\n",
@@ -207,7 +207,8 @@
     "            pbar.update(1)\n",
     "        best_hyp = np.argmax([sum(hyp.logprobs) for hyp in gpt_decoder.beam])\n",
     "        print(\"Correct chunk:\", row.text[i])\n",
-    "        print(\"Best hypothesis:\", \" \".join(gpt_decoder.beam[best_hyp].words[-num_words:]))"
+    "        print(\"Best hypothesis:\", \" \".join(gpt_decoder.beam[best_hyp].words[-num_words:]))\n",
+    "        print()"
    ]
   },
   {
