Fix runs splitting

--- a/decode.ipynb
+++ b/decode.ipynb
@@ -26,6 +26,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.DataFrame([\n",
+    "    [\"da\", \"ra\", \"sa\"],\n",
+    "    [\"da\", \"rb\", \"sa\"],\n",
+    "    [\"da\", \"rc\", \"sa\"],\n",
+    "    [\"da\", \"rd\", \"sa\"],\n",
+    "    [\"da\", \"rf\", \"sa\"],\n",
+    "    [\"da\", \"ra\", \"sb\"],\n",
+    "    [\"da\", \"rb\", \"sb\"],\n",
+    "    [\"da\", \"rc\", \"sb\"],\n",
+    "    [\"da\", \"re\", \"sb\"],\n",
+    "    [\"da\", \"rf\", \"sb\"],\n",
+    "    [\"db\", \"ra\", \"sa\"],\n",
+    "    [\"db\", \"rb\", \"sa\"],\n",
+    "    [\"db\", \"rc\", \"sa\"],\n",
+    "    [\"db\", \"rd\", \"sa\"],\n",
+    "    [\"db\", \"ra\", \"sb\"],\n",
+    "    [\"db\", \"rb\", \"sb\"],\n",
+    "    [\"db\", \"rc\", \"sb\"],\n",
+    "    [\"db\", \"re\", \"sb\"],\n",
+    "], columns=[\"dataset\", \"run\", \"subject\"])\n",
+    "run_counts = df.groupby([\"dataset\", \"run\"]).subject.count().to_frame(name=\"occurrences\").reset_index()\n",
+    "n_subjects = df.groupby(\"dataset\").subject.nunique().to_frame(name=\"n_subjects\").reset_index()\n",
+    "run_counts = run_counts.merge(n_subjects)\n",
+    "run_counts[\"split\"] = \"train\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_ratio = test_ratio = 0.1\n",
+    "\n",
+    "def return_split_sizes(x):\n",
+    "    n_runs = len(x)\n",
+    "    n_valid = max(1, int(valid_ratio * n_runs))\n",
+    "    n_test = max(1, int(test_ratio * n_runs))\n",
+    "    n_train = n_runs - n_valid - n_test\n",
+    "    return [\"train\"] * n_train + [\"valid\"] * n_valid + [\"test\"] * n_test\n",
+    "\n",
+    "main_runs = run_counts.occurrences == run_counts.n_subjects\n",
+    "run_counts.loc[main_runs, \"split\"] = run_counts[main_runs].groupby(\"dataset\").split.transform(return_split_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b, c = run_counts.groupby(\"split\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "datasets = [\"li2022_EN_SS_trimmed_mean\"]\n",
     "subjects = None"
    ]
@@ -89,8 +149,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train, df_valid, df_test = main(return_data=True, caching=False, **config)\n",
-    "_, decoder = main(**config)\n",
+    "df_train, df_valid, df_test = main(\n",
+    "    return_data=True, caching=False, wandb_mode=\"disabled\", **config\n",
+    ")\n",
+    "_, decoder = main(wandb_mode=\"disabled\", **config)\n",
     "decoder = decoder.to(device)\n",
     "clear_output()"
    ]
