--- a/decode.ipynb
+++ b/decode.ipynb
@@ -26,66 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame([\n",
-    "    [\"da\", \"ra\", \"sa\"],\n",
-    "    [\"da\", \"rb\", \"sa\"],\n",
-    "    [\"da\", \"rc\", \"sa\"],\n",
-    "    [\"da\", \"rd\", \"sa\"],\n",
-    "    [\"da\", \"rf\", \"sa\"],\n",
-    "    [\"da\", \"ra\", \"sb\"],\n",
-    "    [\"da\", \"rb\", \"sb\"],\n",
-    "    [\"da\", \"rc\", \"sb\"],\n",
-    "    [\"da\", \"re\", \"sb\"],\n",
-    "    [\"da\", \"rf\", \"sb\"],\n",
-    "    [\"db\", \"ra\", \"sa\"],\n",
-    "    [\"db\", \"rb\", \"sa\"],\n",
-    "    [\"db\", \"rc\", \"sa\"],\n",
-    "    [\"db\", \"rd\", \"sa\"],\n",
-    "    [\"db\", \"ra\", \"sb\"],\n",
-    "    [\"db\", \"rb\", \"sb\"],\n",
-    "    [\"db\", \"rc\", \"sb\"],\n",
-    "    [\"db\", \"re\", \"sb\"],\n",
-    "], columns=[\"dataset\", \"run\", \"subject\"])\n",
-    "run_counts = df.groupby([\"dataset\", \"run\"]).subject.count().to_frame(name=\"occurrences\").reset_index()\n",
-    "n_subjects = df.groupby(\"dataset\").subject.nunique().to_frame(name=\"n_subjects\").reset_index()\n",
-    "run_counts = run_counts.merge(n_subjects)\n",
-    "run_counts[\"split\"] = \"train\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid_ratio = test_ratio = 0.1\n",
-    "\n",
-    "def return_split_sizes(x):\n",
-    "    n_runs = len(x)\n",
-    "    n_valid = max(1, int(valid_ratio * n_runs))\n",
-    "    n_test = max(1, int(test_ratio * n_runs))\n",
-    "    n_train = n_runs - n_valid - n_test\n",
-    "    return [\"train\"] * n_train + [\"valid\"] * n_valid + [\"test\"] * n_test\n",
-    "\n",
-    "main_runs = run_counts.occurrences == run_counts.n_subjects\n",
-    "run_counts.loc[main_runs, \"split\"] = run_counts[main_runs].groupby(\"dataset\").split.transform(return_split_sizes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a, b, c = run_counts.groupby(\"split\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "datasets = [\"li2022_EN_SS_trimmed_mean\"]\n",
     "subjects = None"
    ]
@@ -150,7 +90,7 @@
    "outputs": [],
    "source": [
     "df_train, df_valid, df_test = main(\n",
-    "    return_data=True, caching=False, wandb_mode=\"disabled\", **config\n",
+    "    return_data=True, cache=False, wandb_mode=\"disabled\", **config\n",
     ")\n",
     "_, decoder = main(wandb_mode=\"disabled\", **config)\n",
     "decoder = decoder.to(device)\n",
@@ -163,37 +103,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_chunks = []\n",
-    "df = pd.concat([df_train[[\"dataset\", \"run\"]], df_valid[[\"dataset\", \"run\"]], df_test[[\"dataset\", \"run\"]]]).drop_duplicates()\n",
-    "for _, row in tqdm(df.iterrows(), total=len(df)):\n",
-    "    if row.dataset == \"lebel2023\":\n",
-    "        textgrid_path = f\"data/lebel2023/derivative/TextGrids/{row.run}.TextGrid\"\n",
-    "    chunks = compute_chunks(textgrid_path, 2, 0)\n",
-    "    num_words = [len(chunk.split(\" \")) for chunk in chunks]\n",
-    "    df_chunks.append([row.dataset, row.run, chunks, num_words])\n",
-    "df_chunks = pd.DataFrame(df_chunks, columns=[\"dataset\", \"run\", \"text\", \"num_words\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = df_train.drop(columns=[\"text\"]).merge(df_chunks)\n",
-    "df_valid = df_valid.drop(columns=[\"text\"]).merge(df_chunks)\n",
-    "df_test = df_test.drop(columns=[\"text\"]).merge(df_chunks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "row = df_train[df_train.run == \"wheretheressmoke\"].iloc[0]\n",
     "with torch.no_grad():\n",
     "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decode simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer(config[\"model\"], device=device)\n",
+    "clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = set(df_train.drop_duplicates([\"dataset\", \"run\"]).text.sum())\n",
+    "chunks |= set(df_valid.drop_duplicates([\"dataset\", \"run\"]).text.sum())\n",
+    "chunks = pd.Series(list(chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = df_train.iloc[1]\n",
+    "with torch.no_grad():\n",
+    "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoded_chunks = []\n",
+    "with progress:\n",
+    "    task = progress.add_task(f\"Decoding {row.run}\", total=len(row.text))\n",
+    "    for i in range(len(row.X)):\n",
+    "        context_sentence = \" \".join(decoded_chunks[-config[\"context_length\"]:])\n",
+    "        continuations = context_sentence + \" \" + chunks\n",
+    "        continuations_latents = model.encode(continuations, convert_to_numpy=False, convert_to_tensor=True)\n",
+    "        scores = tmf.pairwise_cosine_similarity(predicted_latents[[i]], continuations_latents)[0].cpu()\n",
+    "        best_continuation = chunks[scores.argmax().item()]\n",
+    "        decoded_chunks.append(best_continuation)\n",
+    "        correct_chunks = row.text[max(0, i-config[\"context_length\"]):i+1]\n",
+    "        predicted_chunks = decoded_chunks[-config[\"context_length\"]:]\n",
+    "        for j, (correct, predicted) in enumerate(zip(correct_chunks, predicted_chunks)):\n",
+    "            if correct == predicted:\n",
+    "                correct_chunks[j] = f\"\\033[92m{correct}\\033[0m\"\n",
+    "                predicted_chunks[j] = f\"\\033[92m{correct}\\033[0m\"\n",
+    "        \n",
+    "        print(f\"Chunk {i+1}/{len(row.X)}\")\n",
+    "        print(\"Correct  :\", \" \\033[91m|\\033[0m \".join(correct_chunks))\n",
+    "        print(\"Predicted:\", \" \\033[91m|\\033[0m \".join(predicted_chunks))\n",
+    "        progress.update(task, advance=1)"
    ]
   },
   {
