--- a/decode.ipynb
+++ b/decode.ipynb
@@ -153,6 +153,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scores.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "decoded_chunks = []\n",
     "with progress:\n",
     "    task = progress.add_task(f\"Decoding {row.run}\", total=len(row.text))\n",
@@ -340,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
