--- a/decode.ipynb
+++ b/decode.ipynb
@@ -112,6 +112,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.concatenate(tuple(df_train.X))\n",
+    "Y = np.concatenate(tuple(df_train.Y))\n",
+    "model = Ridge().fit(Y, X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.concatenate(tuple(df_valid.X))\n",
+    "Y = np.concatenate(tuple(df_valid.Y))\n",
+    "r2 = r2_score(X, model.predict(Y), multioutput=\"raw_values\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2.argsort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "px.histogram(r2[r2 > 0], nbins=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Decode simple"
    ]
   },
@@ -145,15 +203,6 @@
     "row = df_train.iloc[1]\n",
     "with torch.no_grad():\n",
     "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores.shape"
    ]
   },
   {
@@ -349,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
