--- a/decode.ipynb
+++ b/decode.ipynb
@@ -64,6 +64,7 @@
     "    \"weight_decay\": 1e-6,\n",
     "    \"batch_size\": 1,\n",
     "    \"temperature\": 0.05,\n",
+    "    \"top_encoding_voxels\": 5000,\n",
     "}"
    ]
   },
@@ -379,6 +380,61 @@
     "    print(\"Correct: \", row.text[i])\n",
     "    print(i, current_crop_length)\n",
     "    prompt = best_sentence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BERT decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import EncoderDecoderModel, AutoTokenizer\n",
+    "\n",
+    "model = EncoderDecoderModel.from_pretrained(\"patrickvonplaten/bert2bert_cnn_daily_mail\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"patrickvonplaten/bert2bert_cnn_daily_mail\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ARTICLE_TO_SUMMARIZE = (\n",
+    "    \"PG&E stated it scheduled the blackouts in response to forecasts for high winds \"\n",
+    "    \"amid dry conditions. The aim is to reduce the risk of wildfires. Nearly 800 thousand customers were \"\n",
+    "    \"scheduled to be affected by the shutoffs which were expected to last through at least midday tomorrow.\"\n",
+    ")\n",
+    "input_ids = tokenizer(ARTICLE_TO_SUMMARIZE, return_tensors=\"pt\").input_ids\n",
+    "\n",
+    "# autoregressively generate summary (uses greedy decoding by default)\n",
+    "generated_ids = model.generate(input_ids)\n",
+    "generated_text = tokenizer.batch_decode(generated_ids, skip_special_tokens=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([0, 3, 1, 2]).argsort()[::-1].argsort().argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = model.encoder(input_ids)"
    ]
   }
  ],
