--- a/decode.ipynb
+++ b/decode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "    \"weight_decay\": 1e-6,\n",
     "    \"batch_size\": 1,\n",
     "    \"temperature\": 0.05,\n",
-    "    \"top_encoding_voxels\": 5000,\n",
+    "    # \"top_encoding_voxels\": 5000,\n",
     "}"
    ]
   },
@@ -86,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train, df_valid, df_test = main(\n",
     "    return_data=True, cache=False, wandb_mode=\"disabled\", **config\n",
     ")\n",
-    "_, decoder = main(wandb_mode=\"disabled\", **config)\n",
-    "decoder = decoder.to(device)\n",
+    "# _, decoder = main(wandb_mode=\"disabled\", **config)\n",
+    "# decoder = decoder.to(device)\n",
     "clear_output()"
    ]
   },
