--- a/decode.ipynb
+++ b/decode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from pathlib import Path\n",
     "from tqdm.auto import tqdm\n",
     "from src.main import main\n",
-    "from src.prepare_latents import compute_chunks\n",
+    "from src.prepare_latents import compute_chunks, prepare_latents\n",
+    "from src.metrics import retrieval_metrics\n",
     "from src.utils import device, progress\n",
     "from transformers import pipeline\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
     "    \"loss\": \"mixco\",\n",
     "    \"valid_ratio\": 0.1,\n",
     "    \"test_ratio\": 0.1,\n",
-    "    \"context_length\": 6,\n",
+    "    \"context_length\": 0,\n",
     "    \"lag\": 3,\n",
     "    \"smooth\": 6,\n",
     "    \"stack\": 0,\n",
@@ -86,15 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train, df_valid, df_test = main(\n",
     "    return_data=True, cache=False, wandb_mode=\"disabled\", **config\n",
     ")\n",
-    "# _, decoder = main(wandb_mode=\"disabled\", **config)\n",
-    "# decoder = decoder.to(device)\n",
+    "_, decoder = main(wandb_mode=\"disabled\", **config)\n",
+    "decoder = decoder.to(device)\n",
     "clear_output()"
    ]
   },
@@ -104,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row = df_train[df_train.run == \"wheretheressmoke\"].iloc[0]\n",
+    "row = df_train.iloc[1]\n",
     "with torch.no_grad():\n",
     "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
    ]
