--- a/decode.ipynb
+++ b/decode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "    \"loss\": \"mixco\",\n",
     "    \"valid_ratio\": 0.1,\n",
     "    \"test_ratio\": 0.1,\n",
-    "    \"context_length\": 0,\n",
+    "    \"context_length\": 6,\n",
     "    \"lag\": 3,\n",
     "    \"smooth\": 6,\n",
     "    \"stack\": 0,\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "row = df_train.iloc[1]\n",
     "with torch.no_grad():\n",
     "    predicted_latents = decoder(decoder.projector[row.dataset + \"/\" + row.subject](row.X.to(device)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = df_train[[\"chunks\", \"chunks_with_context\"]].explode([\"chunks\", \"chunks_with_context\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "negatives = torch.cat(tuple(df_train.Y)).to(device)"
    ]
   },
   {
