Update figures notebook with new visualizations and data processing for overlap analysis

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -19,6 +19,7 @@
     "from tqdm.auto import tqdm\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
+    "import plotly.express as px\n",
     "\n",
     "plt.rcParams[\"font.family\"] = \"Helvetica\"\n",
     "plt.rcParams[\"xtick.major.pad\"] = 20\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -149,7 +150,7 @@
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
     "    df = []\n",
-    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"setup_v2\"]}})\n",
+    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"setup_v3\"]}})\n",
     "    for run in tqdm(runs):\n",
     "        if run._state == \"finished\":\n",
     "            run_data = run.config | run.summary._json_dict\n",
@@ -185,37 +186,6 @@
     "        \"bert-base-uncased\": \"BERT\",\n",
     "        \"McGill-NLP/LLM2Vec-Meta-Llama-31-8B-Instruct-mntp-unsup-simcse\": \"LLM2Vec\",\n",
     "    }\n",
-    ")\n",
-    "df[\"n_voxels\"] = \"Top 4096 encoding voxels\"\n",
-    "df.loc[df.top_encoding_voxels.isna(), \"n_voxels\"] = \"Whole brain\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "value_name = \"Top 10 Accuracy\"\n",
-    "cols = [\n",
-    "    col\n",
-    "    for col in df\n",
-    "    if \"top_10_accuracy\" in col\n",
-    "    and \"test\" in col\n",
-    "    and \"fold\" in col\n",
-    "    and \"fmriprep\" in col\n",
-    "]\n",
-    "tmp = df.melt(\n",
-    "    id_vars=[\"model\", \"decoder_cfg.class\", \"n_voxels\", \"wrapper_cfg.loss\"],\n",
-    "    var_name=\"subject\",\n",
-    "    value_vars=cols,\n",
-    "    value_name=value_name,\n",
-    ").dropna()\n",
-    "tmp[\"subject\"] = (\n",
-    "    tmp.subject.str.split(\"/\")\n",
-    "    .apply(lambda x: x[-2])\n",
-    "    .str.split(\"_\")\n",
-    "    .apply(lambda x: x[-1])\n",
     ")"
    ]
   },
@@ -225,14 +195,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classical = tmp[\"wrapper_cfg.loss\"] == \"mse\"\n",
-    "contrastive = tmp[\"wrapper_cfg.loss\"] == \"symm_nce\"\n",
-    "mlp = tmp[\"decoder_cfg.class\"] == \"SimpleMLP\"\n",
-    "brain_decoder = tmp[\"decoder_cfg.class\"] == \"BrainDecoder\"\n",
-    "bert = tmp[\"model\"] == \"BERT\"\n",
-    "llm2vec = tmp[\"model\"] == \"LLM2Vec\"\n",
-    "whole_brain = tmp[\"n_voxels\"] == \"Whole brain\"\n",
-    "top_voxels = tmp[\"n_voxels\"] == \"Top 4096 encoding voxels\""
+    "cols = [\n",
+    "    col\n",
+    "    for col in df\n",
+    "    if \"top_10_accuracy\" in col\n",
+    "    and \"test\" in col\n",
+    "    and \"fold\" in col\n",
+    "    and \"fmriprep\" in col\n",
+    "]\n",
+    "id_vars_desc = {\n",
+    "    \"latents_cfg.context_length\": \"+ Context Length\",\n",
+    "    \"alignment_cfg.lag\": \"+ Lag\",\n",
+    "    \"alignment_cfg.smooth\": \"+ Smooth\",\n",
+    "    \"model\": \"BERT $\\\\rightarrow$ LLM2Vec\",\n",
+    "    \"wrapper_cfg.loss\": \"MSE Loss $\\\\rightarrow$ Contrastive Loss\",\n",
+    "    \"decoder_cfg.class\": \"Simple MLP $\\\\rightarrow$ BrainDecoder\",\n",
+    "}\n",
+    "id_vars = id_vars_desc.keys()\n",
+    "tmp = df.melt(\n",
+    "    id_vars=id_vars,\n",
+    "    value_vars=cols,\n",
+    "    value_name=\"Top 10 Accuracy\",\n",
+    ").dropna()"
    ]
   },
   {
@@ -241,27 +225,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_1 = whole_brain * bert * brain_decoder * classical\n",
-    "setup_1 = tmp[setup_1].copy()\n",
-    "setup_1[\"Setup\"] = \"Base\"\n",
-    "setup_2 = whole_brain * bert * brain_decoder * contrastive\n",
-    "setup_2 = tmp[setup_2].copy()\n",
-    "setup_2[\"Setup\"] = \"+ Contrastive loss\"\n",
-    "setup_3 = whole_brain * llm2vec * brain_decoder * contrastive\n",
-    "setup_3 = tmp[setup_3].copy()\n",
-    "setup_3[\"Setup\"] = \"+ LLM2Vec latents\"\n",
-    "setup_4 = top_voxels * llm2vec * brain_decoder * contrastive\n",
-    "setup_4 = tmp[setup_4].copy()\n",
-    "setup_4[\"Setup\"] = \"+ Top 4096 encoding voxels\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "setups = pd.concat([baseline, setup_1, setup_2, setup_3, setup_4])"
+    "cols = {col: tmp[col].unique() for col in id_vars}\n",
+    "cols[\"model\"] = [\"BERT\", \"LLM2Vec\"]\n",
+    "setup = {col: l[0] for col, l in cols.items()}\n",
+    "setup[\"Setup\"] = \"Base\"\n",
+    "setups = [setup.copy()]\n",
+    "for col, l in cols.items():\n",
+    "    setup[col] = l[1]\n",
+    "    setup[\"Setup\"] = id_vars_desc[col]\n",
+    "    setups.append(setup.copy())\n",
+    "setups = pd.DataFrame(setups).merge(tmp)\n",
+    "setups = pd.concat([baseline, setups])"
    ]
   },
   {
@@ -446,7 +420,6 @@
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
     "    df = []\n",
-    "    df_sizes = []\n",
     "    runs = api.runs(filters={\"tags\": {\"$in\": [\"increase_subjects_balanced\"]}})\n",
     "    for run in tqdm(runs):\n",
     "        if run._state == \"finished\":\n",
@@ -513,6 +486,9 @@
     "    palette=\"tab10\",\n",
     "    legend=\"full\",\n",
     ")\n",
+    "g.axes[0, 0].yaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
+    ")\n",
     "g.set_titles(\"Hidden dim: {col_name}\")\n",
     "g.set_axis_labels(\"Number of subjects\", \"Top 10 Accuracy\")\n",
     "sns.despine(offset=10, trim=True)\n",
@@ -522,9 +498,139 @@
     "    loc=\"center right\",\n",
     "    frame_on=True,\n",
     ")\n",
+    "plt.legend(\n",
+    "    bbox_to_anchor=(1.25, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False\n",
+    ")\n",
     "plt.savefig(\n",
     "    \"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_path = Path(\"figs/overlap_v2_df.csv.gz\")\n",
+    "if df_path.exists():\n",
+    "    df = pd.read_csv(df_path)\n",
+    "else:\n",
+    "    df = []\n",
+    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"overlap_v2\"]}})\n",
+    "    for run in tqdm(runs):\n",
+    "        if run._state == \"finished\":\n",
+    "            run_data = run.config | run.summary._json_dict\n",
+    "            df.append(pd.json_normalize(run_data))\n",
+    "    df = pd.concat(df)\n",
+    "    df[\"n_subjects\"] = df[\"subjects.lebel2023_fmriprep\"].apply(len)\n",
+    "    df.to_csv(df_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = [\n",
+    "    col\n",
+    "    for col in df\n",
+    "    if \"top_10_accuracy\" in col\n",
+    "    and \"test\" in col\n",
+    "    and \"fold\" in col\n",
+    "    and \"fmriprep\" in col\n",
+    "]\n",
+    "tmp = df.melt(\n",
+    "    id_vars=[\n",
+    "        \"n_subjects\",\n",
+    "        \"wrapper_cfg.hidden_dim\",\n",
+    "        \"splitting.overlap\",\n",
+    "        \"subjects.lebel2023_fmriprep\",\n",
+    "    ],\n",
+    "    value_vars=cols,\n",
+    "    value_name=\"Top 10 Accuracy\",\n",
+    "    var_name=\"subject\",\n",
+    ")\n",
+    "tmp[\"subject\"] = (\n",
+    "    tmp.subject.str.split(\"/\")\n",
+    "    .apply(lambda x: x[-2])\n",
+    "    .str.split(\"_\")\n",
+    "    .apply(lambda x: x[-1])\n",
+    "    .str.replace(\"UTS0\", \"\")\n",
+    ")\n",
+    "tmp = tmp[(tmp.n_subjects > 1) + (tmp[\"splitting.overlap\"] == 1)]\n",
+    "tmp = tmp.dropna()\n",
+    "single_subject = (\n",
+    "    tmp[tmp.n_subjects == 1]\n",
+    "    .groupby([\"wrapper_cfg.hidden_dim\", \"subject\"])[\"Top 10 Accuracy\"]\n",
+    "    .mean()\n",
+    ")\n",
+    "tmp = tmp.merge(\n",
+    "    single_subject,\n",
+    "    on=[\"wrapper_cfg.hidden_dim\", \"subject\"],\n",
+    "    suffixes=(\"\", \" single\"),\n",
+    ")\n",
+    "tmp[\"Top 10 Accuracy\"] = tmp[\"Top 10 Accuracy\"] - tmp[\"Top 10 Accuracy single\"]\n",
+    "tmp = tmp[tmp.n_subjects == 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp.groupby([\"subject\", \"wrapper_cfg.hidden_dim\", \"splitting.overlap\"]).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.relplot(\n",
+    "    data=tmp,\n",
+    "    x=\"splitting.overlap\",\n",
+    "    y=\"Top 10 Accuracy\",\n",
+    "    kind=\"line\",\n",
+    "    col=\"wrapper_cfg.hidden_dim\",\n",
+    "    hue=\"subject\",\n",
+    "    height=6,\n",
+    "    aspect=1.5,\n",
+    "    hue_order=sorted(tmp.subject.unique()),\n",
+    ")\n",
+    "g.axes[0, 0].yaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(lambda y, _: f\"{int(round(100 * y,0))}%\")\n",
+    ")\n",
+    "g.set_axis_labels(\"Stimuli overlap\", \"Multi - single\\nTop 10 Accuracy\")\n",
+    "g.set_titles(\"Hidden dim: {col_name}\")\n",
+    "for ax in g.axes.flat:\n",
+    "    ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
+    "g.legend.set(\n",
+    "    title=\"Subject\",\n",
+    "    bbox_to_anchor=(1, 0.5),\n",
+    "    loc=\"center right\",\n",
+    "    frame_on=True,\n",
+    ")\n",
+    "plt.legend(\n",
+    "    [],\n",
+    "    [],\n",
+    "    bbox_to_anchor=(1.25, 1),\n",
+    "    loc=\"upper left\",\n",
+    "    borderaxespad=0.0,\n",
+    "    frameon=False,\n",
+    ")\n",
+    "sns.despine(offset=10, trim=True)\n",
+    "plt.savefig(\"paper/figs/overlap.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -609,6 +715,9 @@
     "    ax.xaxis.set_major_locator(ticker.LinearLocator(5))\n",
     "sns.despine(offset=20, trim=True)\n",
     "g.set_titles(template=\"{col_name}\")\n",
+    "g.axes[0, 0].yaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
+    ")\n",
     "plt.savefig(\n",
     "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
     ")"
