Update figures notebook with new data processing and visualization enhancements for accuracy analysis

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -420,13 +420,18 @@
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
     "    df = []\n",
-    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"increase_subjects_balanced\"]}})\n",
+    "    runs = api.runs(\n",
+    "        filters={\"tags\": {\"$in\": [\"increase_subjects_balanced_v2\"]}}\n",
+    "    )\n",
     "    for run in tqdm(runs):\n",
     "        if run._state == \"finished\":\n",
     "            run_data = run.config | run.summary._json_dict\n",
     "            df.append(pd.json_normalize(run_data))\n",
     "    df = pd.concat(df)\n",
     "    df[\"n_subjects\"] = df[\"subjects.lebel2023_fmriprep_balanced\"].apply(len)\n",
+    "    df[\"subjects.lebel2023_fmriprep_balanced\"] = df[\n",
+    "        \"subjects.lebel2023_fmriprep_balanced\"\n",
+    "    ].astype(str)\n",
     "    df.to_csv(df_path, index=False)"
    ]
   },
@@ -445,10 +450,20 @@
     "    and \"fmriprep\" in col\n",
     "]\n",
     "tmp = df.melt(\n",
-    "    id_vars=[\"n_subjects\", \"wrapper_cfg.hidden_dim\"],\n",
+    "    id_vars=[\n",
+    "        \"n_subjects\",\n",
+    "        \"wrapper_cfg.hidden_dim\",\n",
+    "        \"subjects.lebel2023_fmriprep_balanced\",\n",
+    "    ],\n",
     "    value_vars=cols,\n",
     "    value_name=\"Top 10 Accuracy\",\n",
     "    var_name=\"subject\",\n",
+    ")\n",
+    "tmp[\"fold\"] = (\n",
+    "    tmp.subject.str.split(\"/\")\n",
+    "    .apply(lambda x: x[0])\n",
+    "    .str.split(\"_\")\n",
+    "    .apply(lambda x: x[-1])\n",
     ")\n",
     "tmp[\"subject\"] = (\n",
     "    tmp.subject.str.split(\"/\")\n",
@@ -456,6 +471,26 @@
     "    .str.split(\"_\")\n",
     "    .apply(lambda x: x[-1])\n",
     "    .str.replace(\"UTS0\", \"\")\n",
+    ")\n",
+    "tmp = tmp.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_perfs = tmp[tmp.n_subjects == 1][\n",
+    "    [\"wrapper_cfg.hidden_dim\", \"subject\", \"fold\", \"Top 10 Accuracy\"]\n",
+    "]\n",
+    "tmp = tmp.merge(\n",
+    "    single_perfs,\n",
+    "    on=[\"wrapper_cfg.hidden_dim\", \"subject\", \"fold\"],\n",
+    "    suffixes=(\"\", \" single\"),\n",
+    ")\n",
+    "tmp[\"Multi - single\\nTop 10 Accuracy\"] = (\n",
+    "    tmp[\"Top 10 Accuracy\"] - tmp[\"Top 10 Accuracy single\"]\n",
     ")"
    ]
   },
@@ -465,7 +500,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = tmp[tmp[\"wrapper_cfg.hidden_dim\"] != 512]"
+    "combi_scores = tmp.groupby(\n",
+    "    [\n",
+    "        \"subject\",\n",
+    "        \"wrapper_cfg.hidden_dim\",\n",
+    "        \"subjects.lebel2023_fmriprep_balanced\",\n",
+    "        \"n_subjects\",\n",
+    "    ]\n",
+    ")[\"Top 10 Accuracy\"].mean()\n",
+    "best_combis = combi_scores.groupby(\n",
+    "    [\"subject\", \"n_subjects\", \"wrapper_cfg.hidden_dim\"]\n",
+    ").idxmax()\n",
+    "best_combis = (\n",
+    "    combi_scores[best_combis].reset_index().drop(columns=\"Top 10 Accuracy\")\n",
+    ")\n",
+    "tmp = tmp.merge(best_combis)"
    ]
   },
   {
@@ -477,12 +526,12 @@
     "g = sns.relplot(\n",
     "    data=tmp,\n",
     "    x=\"n_subjects\",\n",
-    "    y=\"Top 10 Accuracy\",\n",
+    "    y=\"Multi - single\\nTop 10 Accuracy\",\n",
     "    hue=\"subject\",\n",
     "    kind=\"line\",\n",
     "    col=\"wrapper_cfg.hidden_dim\",\n",
-    "    height=6,\n",
-    "    aspect=1.5,\n",
+    "    height=8,\n",
+    "    aspect=1.4,\n",
     "    palette=\"tab10\",\n",
     "    legend=\"full\",\n",
     ")\n",
@@ -490,7 +539,7 @@
     "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     ")\n",
     "g.set_titles(\"Hidden dim: {col_name}\")\n",
-    "g.set_axis_labels(\"Number of subjects\", \"Top 10 Accuracy\")\n",
+    "g.set_axis_labels(\"Number of subjects\")\n",
     "sns.despine(offset=10, trim=True)\n",
     "g.legend.set(\n",
     "    title=\"Subject\",\n",
@@ -501,6 +550,8 @@
     "plt.legend(\n",
     "    bbox_to_anchor=(1.25, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False\n",
     ")\n",
+    "for ax in g.axes.flat:\n",
+    "    ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
     "plt.savefig(\n",
     "    \"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
     ")"
