Update figures notebook with enhancements to subject data processing and accuracy calculation

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -582,6 +582,9 @@
     "            df.append(pd.json_normalize(run_data))\n",
     "    df = pd.concat(df)\n",
     "    df[\"n_subjects\"] = df[\"subjects.lebel2023_fmriprep\"].apply(len)\n",
+    "    df[\"subjects.lebel2023_fmriprep\"] = df[\n",
+    "        \"subjects.lebel2023_fmriprep\"\n",
+    "    ].astype(str)\n",
     "    df.to_csv(df_path, index=False)"
    ]
   },
@@ -610,6 +613,12 @@
     "    value_name=\"Top 10 Accuracy\",\n",
     "    var_name=\"subject\",\n",
     ")\n",
+    "tmp[\"fold\"] = (\n",
+    "    tmp.subject.str.split(\"/\")\n",
+    "    .apply(lambda x: x[0])\n",
+    "    .str.split(\"_\")\n",
+    "    .apply(lambda x: x[-1])\n",
+    ")\n",
     "tmp[\"subject\"] = (\n",
     "    tmp.subject.str.split(\"/\")\n",
     "    .apply(lambda x: x[-2])\n",
@@ -619,14 +628,12 @@
     ")\n",
     "tmp = tmp[(tmp.n_subjects > 1) + (tmp[\"splitting.overlap\"] == 1)]\n",
     "tmp = tmp.dropna()\n",
-    "single_subject = (\n",
-    "    tmp[tmp.n_subjects == 1]\n",
-    "    .groupby([\"wrapper_cfg.hidden_dim\", \"subject\"])[\"Top 10 Accuracy\"]\n",
-    "    .mean()\n",
-    ")\n",
+    "single_subject = tmp[tmp.n_subjects == 1][\n",
+    "    [\"wrapper_cfg.hidden_dim\", \"subject\", \"fold\", \"Top 10 Accuracy\"]\n",
+    "]\n",
     "tmp = tmp.merge(\n",
     "    single_subject,\n",
-    "    on=[\"wrapper_cfg.hidden_dim\", \"subject\"],\n",
+    "    on=[\"wrapper_cfg.hidden_dim\", \"subject\", \"fold\"],\n",
     "    suffixes=(\"\", \" single\"),\n",
     ")\n",
     "tmp[\"Top 10 Accuracy\"] = tmp[\"Top 10 Accuracy\"] - tmp[\"Top 10 Accuracy single\"]\n",
