Enhance figures notebook with new visualizations and data processing for NLP metrics

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -20,6 +20,9 @@
     "import seaborn as sns\n",
     "from pathlib import Path\n",
     "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "\n",
+    "pio.renderers.default = \"browser\"\n",
     "\n",
     "plt.rcParams[\"font.family\"] = \"Helvetica\"\n",
     "plt.rcParams[\"xtick.major.pad\"] = 20\n",
@@ -315,8 +318,8 @@
     "    .apply(lambda x: x[-2])\n",
     "    .str.replace(\"lebel2023_fmriprep_UTS0\", \"\")\n",
     ")\n",
-    "tmp[\"Number of training samples\"] = tmp[[\"train/n_trs\", \"train/size\"]].max(\n",
-    "    axis=1\n",
+    "tmp[\"Number of training samples\"] = (\n",
+    "    tmp[[\"train/n_trs\", \"train/size\"]].max(axis=1).fillna(0)\n",
     ")\n",
     "tmp = tmp.dropna(subset=[\"Top 10 Accuracy\"])"
    ]
@@ -360,15 +363,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp[\"Number of training samples\"].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(10, 6))\n",
     "ax = sns.lineplot(\n",
     "    tmp,\n",
@@ -376,11 +370,18 @@
     "    y=\"Top 10 Accuracy\",\n",
     "    hue=\"Subject\",\n",
     ")\n",
-    "plt.xscale(\"log\")\n",
+    "# plt.xscale(\"log\")\n",
+    "plt.xscale(\"symlog\")\n",
+    "plt.xlim(-0.5, 1e4)\n",
     "# plt.yscale(\"log\")\n",
     "ax.yaxis.set_major_formatter(\n",
     "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     ")\n",
+    "# ax.xaxis.set_major_formatter(\n",
+    "#     ticker.FuncFormatter(\n",
+    "#         lambda x, _: f\"$10^{int(np.log10(x))}$\" if x != 100 else 0\n",
+    "#     )\n",
+    "# )\n",
     "ticklabels = ax.get_xticklabels()\n",
     "for label in ticklabels:\n",
     "    n_mins = (label.get_position()[0] * 2) // 60\n",
@@ -388,7 +389,7 @@
     "    if n_mins > 60:\n",
     "        n_mins = n_mins // 60\n",
     "        label.set_text(label.get_text() + f\"\\n$\\sim$ {n_mins:.0f} hours\")\n",
-    "    else:\n",
+    "    elif n_mins > 0:\n",
     "        label.set_text(label.get_text() + f\"\\n$\\sim$ {n_mins:.0f} min\")\n",
     "ax.set_xticklabels(ticklabels)\n",
     "plt.legend(\n",
@@ -797,6 +798,122 @@
     "plt.savefig(\n",
     "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### V2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"figs/zoom_in_nlp.csv\")\n",
+    "baseline = get_baseline()\n",
+    "nlp_distances = [\n",
+    "    \"glove_bow_cosine\",\n",
+    "    \"glove_bow_pos_restricted_cosine\",\n",
+    "    \"pos_ratio\",\n",
+    "    \"ratio\",\n",
+    "]\n",
+    "baseline = baseline[nlp_distances].agg([\"mean\", \"std\"])\n",
+    "baseline = baseline.T.reset_index(names=\"distance\")\n",
+    "df = df.merge(baseline, on=\"distance\", suffixes=(\"\", \"_baseline\"))\n",
+    "df[\"mean\"] = (df[\"mean\"] - df[\"mean_baseline\"]) / df[\"mean_baseline\"]\n",
+    "# df[\"std\"] = df[\"std\"] / df[\"mean_baseline\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import ScalarFormatter, FuncFormatter\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "ax = sns.lineplot(data=df, x=\"top\", y=\"mean\", hue=\"distance\")\n",
+    "plt.legend(bbox_to_anchor=(1.05, 0.5), loc=\"center left\")\n",
+    "# for distance in df[\"distance\"].unique():\n",
+    "#     plt.fill_between(\n",
+    "#         df[df[\"distance\"] == distance][\"top\"],\n",
+    "#         df[df[\"distance\"] == distance][\"mean\"]\n",
+    "#         - df[df[\"distance\"] == distance][\"std\"],\n",
+    "#         df[df[\"distance\"] == distance][\"mean\"]\n",
+    "#         + df[df[\"distance\"] == distance][\"std\"],\n",
+    "#         alpha=0.2,\n",
+    "#     )\n",
+    "plt.xlabel(\"Candidate rank\")\n",
+    "plt.ylabel(\"Normalized similarity\")\n",
+    "plt.xscale(\"log\")\n",
+    "# plt.title(\"(similarity - baseline mean) / baseline std\")\n",
+    "plt.title(\"(similarity - baseline mean) / baseline mean\")\n",
+    "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
+    "# ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
+    "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{int(100 * x)}%\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(\n",
+    "    df,\n",
+    "    x=\"top\",\n",
+    "    y=\"mean\",\n",
+    "    color=\"distance\",\n",
+    "    error_y=df[\"std\"],\n",
+    "    log_y=True,\n",
+    "    # log_x=True,\n",
+    "    height=800,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby(\"top\")[nlp_distances].agg([\"mean\", \"std\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index().to_csv(\"figs/zoom_in_nlp_all_agg.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mean = df.xs(\"mean\", axis=1, level=1).copy()\n",
+    "df_mean[\"top\"] = df.top\n",
+    "df_std = df.xs(\"std\", axis=1, level=1).copy()\n",
+    "df_std[\"top\"] = df.top\n",
+    "df = df_mean.merge(df_std, on=\"top\", suffixes=(\"\", \"_std\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"figs/zoom_in_nlp_all_agg.csv\", index=False)"
    ]
   },
   {
