--- a/figures.ipynb
+++ b/figures.ipynb
@@ -115,9 +115,9 @@
    "outputs": [],
    "source": [
     "def get_baseline():\n",
-    "    baseline_path = Path(\"figs/baseline.csv.gz\")\n",
+    "    baseline_path = Path(\".figs/baseline.csv.gz\")\n",
     "    if baseline_path.exists():\n",
-    "        return pd.read_csv(\"figs/baseline.csv.gz\")\n",
+    "        return pd.read_csv(\".figs/baseline.csv.gz\")\n",
     "    else:\n",
     "        baseline = load_split_folds(\n",
     "            name=\"33582f283c354ab9f545ab5c4cd8866fc46b8fc6\",\n",
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_path = Path(\"figs/setup_df.csv.gz\")\n",
+    "df_path = Path(\".figs/setup_df.csv.gz\")\n",
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
@@ -228,6 +228,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "brainllm = pd.Series([0.0115, 0.0166, 0.0201, 0.0143], name=\"Top 10 Accuracy\")\n",
+    "brainllm = brainllm.to_frame()\n",
+    "brainllm[\"Setup\"] = \"BrainLLM\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cols = {col: tmp[col].unique() for col in id_vars}\n",
     "cols[\"model\"] = [\"BERT\", \"LLM2Vec\"]\n",
     "setup = {col: l[0] for col, l in cols.items()}\n",
@@ -238,7 +249,8 @@
     "    setup[\"Setup\"] = id_vars_desc[col]\n",
     "    setups.append(setup.copy())\n",
     "setups = pd.DataFrame(setups).merge(tmp)\n",
-    "setups = pd.concat([baseline, setups])"
+    "white_space = pd.DataFrame([{\"Setup\": \"\", \"Top 10 Accuracy\": 0}])\n",
+    "setups = pd.concat([baseline, brainllm, white_space, setups])"
    ]
   },
   {
@@ -255,14 +267,20 @@
     "    legend=None,\n",
     "    palette=\"Blues\",\n",
     ")\n",
-    "ax.set_xlim(-0.005, ax.get_xlim()[1])\n",
+    "patches = ax.patches\n",
+    "patches[0].set_facecolor(\"grey\")\n",
+    "patches[1].set_facecolor(\"grey\")\n",
     "ax.set_ylabel(\"\")\n",
+    "ax.set_xlim(-0.005, ax.get_xlim()[1])\n",
     "ax.xaxis.set_major_locator(ticker.LinearLocator(4))\n",
     "ax.xaxis.set_major_formatter(\n",
     "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     ")\n",
-    "# plt.title(\"Setup comparison\")\n",
     "sns.despine(offset=20, trim=True)\n",
+    "ax.set_yticks(list(range(2)) + list(range(3, 10)))\n",
+    "for i, label in enumerate(ax.get_yticklabels()):\n",
+    "    if i > 1:\n",
+    "        label.set_color(sns.color_palette(\"Blues\")[5])\n",
     "plt.savefig(\"paper/figs/setup.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
@@ -1011,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
