BrainLLM + 0 on increase data

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -136,6 +136,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brainllm = pd.Series([0.0115, 0.0166, 0.0201, 0.0143], name=\"Top 10 Accuracy\")\n",
+    "brainllm = brainllm.to_frame()\n",
+    "brainllm[\"Setup\"] = \"BrainLLM\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,17 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brainllm = pd.Series([0.0115, 0.0166, 0.0201, 0.0143], name=\"Top 10 Accuracy\")\n",
-    "brainllm = brainllm.to_frame()\n",
-    "brainllm[\"Setup\"] = \"BrainLLM\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cols = {col: tmp[col].unique() for col in id_vars}\n",
     "cols[\"model\"] = [\"BERT\", \"LLM2Vec\"]\n",
     "setup = {col: l[0] for col, l in cols.items()}\n",
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_path = Path(\"figs/increase_data_df.csv.gz\")\n",
+    "df_path = Path(\".figs/increase_data_df.csv.gz\")\n",
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
@@ -337,7 +337,7 @@
     "    .str.replace(\"lebel2023_fmriprep_UTS0\", \"\")\n",
     ")\n",
     "tmp[\"Number of training samples\"] = (\n",
-    "    tmp[[\"train/n_trs\", \"train/size\"]].max(axis=1).fillna(0)\n",
+    "    tmp[[\"train/n_trs\", \"train/size\"]].max(axis=1).fillna(100)\n",
     ")\n",
     "tmp = tmp.dropna(subset=[\"Top 10 Accuracy\"])"
    ]
@@ -388,18 +388,18 @@
     "    y=\"Top 10 Accuracy\",\n",
     "    hue=\"Subject\",\n",
     ")\n",
-    "# plt.xscale(\"log\")\n",
-    "plt.xscale(\"symlog\")\n",
-    "plt.xlim(-0.5, 1e4)\n",
+    "plt.xscale(\"log\")\n",
+    "# plt.xscale(\"symlog\")\n",
+    "# plt.xlim(-0.5, 1e4)\n",
     "# plt.yscale(\"log\")\n",
-    "ax.yaxis.set_major_formatter(\n",
-    "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
-    ")\n",
-    "# ax.xaxis.set_major_formatter(\n",
-    "#     ticker.FuncFormatter(\n",
-    "#         lambda x, _: f\"$10^{int(np.log10(x))}$\" if x != 100 else 0\n",
-    "#     )\n",
+    "# ax.yaxis.set_major_formatter(\n",
+    "#     ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     "# )\n",
+    "ax.xaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(\n",
+    "        lambda x, _: f\"$10^{int(np.log10(x))}$\" if x != 100 else 0\n",
+    "    )\n",
+    ")\n",
     "ticklabels = ax.get_xticklabels()\n",
     "for label in ticklabels:\n",
     "    n_mins = (label.get_position()[0] * 2) // 60\n",
@@ -422,13 +422,24 @@
     "plt.axhline(y=0.005, color=\"gray\", linestyle=\"--\")\n",
     "plt.text(\n",
     "    x=0.99,\n",
-    "    y=0.006,\n",
+    "    y=-0.006,\n",
     "    s=\"Chance\",\n",
     "    color=\"gray\",\n",
+    "    ha=\"right\",\n",
+    "    va=\"top\",\n",
+    "    transform=ax.get_yaxis_transform(),\n",
+    ")\n",
+    "plt.axhline(y=brainllm[\"Top 10 Accuracy\"].mean(), color=\"k\", linestyle=\"--\")\n",
+    "plt.text(\n",
+    "    x=0.99,\n",
+    "    y=0.02,\n",
+    "    s=\"BrainLLM\",\n",
+    "    color=\"k\",\n",
     "    ha=\"right\",\n",
     "    va=\"bottom\",\n",
     "    transform=ax.get_yaxis_transform(),\n",
     ")\n",
+    "plt.ylim(-0.05, plt.ylim()[1])\n",
     "plt.savefig(\"paper/figs/increase_data.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
