--- a/figures.ipynb
+++ b/figures.ipynb
@@ -440,6 +440,17 @@
     "    transform=ax.get_yaxis_transform(),\n",
     ")\n",
     "plt.ylim(-0.05, plt.ylim()[1])\n",
+    "# Add axis break\n",
+    "ax.plot(\n",
+    "    [165, 200],\n",
+    "    [-0.05, -0.05],\n",
+    "    color=\"white\",\n",
+    "    linewidth=20,\n",
+    "    clip_on=False,\n",
+    "    zorder=100,\n",
+    ")\n",
+    "ax.plot([135, 165], [-0.07, -0.03], clip_on=False, color=\"k\", zorder=200)\n",
+    "ax.plot([200, 245], [-0.07, -0.03], clip_on=False, color=\"k\", zorder=200)\n",
     "plt.savefig(\"paper/figs/increase_data.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
